--- a/icuiwd/index.html
+++ b/icuiwd/index.html
@@ -1,19 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gift nyambose html</title>
-    <h1>HTML Introduction</h1>
-    <H1>HTML Editors, HTML Basic,HTML Elements, HTML Atributes, HTML Headings, HTMLParagraphs, HTML Styles, HTML Formating, HTML Quotation, HTML Comments, HTML Colors</H1>
-    <h2></h2>
-    <p style="color: blue;">HTML Editors, HTML Basic,HTML Element
-        <!-- this is a comment--
-    <q>This is a quote</q>
-    
-
-</head>
-<body>
-    
-</body>
-</html>
+    <title>HTML BEGINNER PROJECT</title>
+ </head>
+ <body>
+    <h1>Introduction to HTML</h1>
+<p>HTML is the language or creating website.</p>
+<h2>Topics in HTML</h2>
+<ul>
+    <li>HTML Editors</li> 
+    <li>HTML Basic</li> 
+    <li>HTML Elements</li> 
+    <li>HTML Attributes</li> 
+    <li>HTML Headings</li> 
+    <li>HTML Paragraphs</li> 
+    <li>HTML Styles</li> 
+    <li>HTML Formatting</li> 
+    <li>HTML Quotations</li> 
+    <li>HTML Comments</li> 
+    <li>HTML Colors</li> 
+ </ul> 
+<h2>HTML Editors, HTML Basic, HTML Elements</h2>
+<p styles="color: blue;"> This is blue text.</p>
+<!--This is comment-->
+<q>This is a quote</q>
+ </body>
+ </html>
